--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="header__inner">
       <a href="#obra" class="logo">
-        <img src="Multimedia/Logo/amazonia logo.png" alt="Amazonia - Viviendas industrializadas" class="logo__image">
+        <img src="https://pruebasnb.cloud/Multimedia/Logo/amazonia logo.png" alt="Amazonia - Viviendas industrializadas" class="logo__image">
         <span class="sr-only">Amazonia - Viviendas industrializadas</span>
       </a>
 
