--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <div class="media-dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
                   <div class="media-dropdown__menu" aria-label="Videos de Casa Belladona">
-                    <a class="media-dropdown__item" href="Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA EXT.mp4" target="_blank" rel="noopener">Recorrido exterior</a>
+                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA EXT.mp4" target="_blank" rel="noopener">Recorrido exterior</a>
                   </div>
                 </div>
               </div>
