--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <div class="media-dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
                   <div class="media-dropdown__menu" aria-label="Videos de Casa Bromelia">
-                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Videos/VIDEO Casa Bromelia (5).mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
               </div>
@@ -381,7 +381,7 @@
                 <div class="media-dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
                   <div class="media-dropdown__menu" aria-label="Videos de Casa Dionizia">
-                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop5/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop5Dionizia/Videos/VIDEO Casa Dinizia.mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
               </div>
@@ -542,7 +542,8 @@
                 <div class="media-dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
                   <div class="media-dropdown__menu" aria-label="Videos de Quincho AMZ I">
-                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Videos/EXTERIOR QUINCHO.mp4" target="_blank" rel="noopener">Exterior</a>
+                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Videos/INTERIOR QUINCHO.mp4" target="_blank" rel="noopener">Interior</a>
                   </div>
                 </div>
               </div>
