--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="hero__media">
         <!-- VIDEO: subi tu archivo a la carpeta "videos" y cambia el nombre -->
         <video class="video" autoplay muted loop playsinline>
-          <source src="https://pruebasnb.cloud/Multimedia/Video%20principal/Video_Corto_de_Render_de_Casa.mp4" type="video/mp4">
+          <source src="https://pruebasnb.cloud/Multimedia/Video%20principal/www.amazoniaamz.com.MP4" type="video/mp4">
           Tu navegador no soporta video.
         </video>
       </div>
