Fix dropdown positioning for Ver planos dropdowns

--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Bixa">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bixa">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/WhatsApp Image 2025-12-12 at 11.45.13.jpeg" target="_blank" rel="noopener">Plano principal</a>
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop1Bixa/Planos/2.AXO2.jpg" target="_blank" rel="noopener">Plano principal</a>                        
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Bixa">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Bixa">
                     <a class="media-dropdown__item" href="Multimedia/Prop1Bixa/Videos/BIXA INTERIOR COMPLETO.mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
@@ -202,15 +202,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Camelia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Camelia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Camelia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Camelia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Videos/4_3 CASA CAMELIA VIDEO ETAPAS.mp4" target="_blank" rel="noopener">Recorrido por etapas</a>
                   </div>
                 </div>
@@ -263,15 +263,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Belladona">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Belladona">
                     <a class="media-dropdown__item" href="Multimedia/Prop3/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Belladona">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Belladona">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop3Belladona/Videos/VIDEO BELLA DONNA EXT.mp4" target="_blank" rel="noopener">Recorrido exterior</a>
                   </div>
                 </div>
@@ -323,15 +323,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Bromelia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bromelia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Bromelia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Bromelia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Videos/VIDEO Casa Bromelia (5).mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
@@ -380,15 +380,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Dionizia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Dionizia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop5/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Dionizia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Dionizia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop5Dionizia/Videos/VIDEO Casa Dinizia.mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
@@ -435,15 +435,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Patagonia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Patagonia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop6/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Patagonia">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Patagonia">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop6/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
@@ -489,15 +489,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Casa Rio">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Rio">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Casa Rio">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Rio">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
@@ -547,15 +547,15 @@
                 </div>
               </div>
               <div class="model__actions">
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
-                  <div class="media-dropdown__menu" aria-label="Planos de Quincho AMZ I">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Quincho AMZ I">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
                   </div>
                 </div>
-                <div class="media-dropdown">
+                <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
-                  <div class="media-dropdown__menu" aria-label="Videos de Quincho AMZ I">
+                  <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Quincho AMZ I">
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Videos/EXTERIOR QUINCHO.mp4" target="_blank" rel="noopener">Exterior</a>
                     <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop8Quincho/Videos/INTERIOR QUINCHO.mp4" target="_blank" rel="noopener">Interior</a>
                   </div>
@@ -660,11 +660,7 @@
 
   const closeDropdowns = () => {
     dropdowns.forEach((dropdown) => {
-      dropdown.classList.remove('is-open');
-      const menu = dropdown.querySelector('.media-dropdown__menu');
-      if (menu) {
-        menu.style.removeProperty('--menu-height');
-      }
+      dropdown.classList.remove('open');
     });
   };
 
@@ -676,21 +672,17 @@
 
     toggle.addEventListener('click', (event) => {
       event.stopPropagation();
-      const isOpen = dropdown.classList.contains('is-open');
+      const isOpen = dropdown.classList.contains('open');
       closeDropdowns();
 
       if (!isOpen) {
-        const paddingY = parseFloat(getComputedStyle(menu).getPropertyValue('--menu-padding-y')) || 0;
-        const menuHeight = menu.scrollHeight + paddingY * 2;
-        menu.style.setProperty('--menu-height', `${menuHeight}px`);
-        dropdown.classList.add('is-open');
+        dropdown.classList.add('open');
       }
     });
 
     menu.querySelectorAll('a').forEach((link) => {
       link.addEventListener('click', () => {
-        dropdown.classList.remove('is-open');
-        menu.style.removeProperty('--menu-height');
+        dropdown.classList.remove('open');
       });
     });
   });
