--- a/index.html
+++ b/index.html
@@ -397,11 +397,11 @@
           </div>
         </article>
 
-        <!-- CASA PATAGONIA -->
+        <!-- CASA AMZ I · DESARROLLO RECIDENCIAL -->
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Patagonia</h3>
+              <h3>Casa Amz I · Desarrollo Recidencial</h3>
               <p class="model__headline">132 m2 · 3 dorm · 5 amb · 3 banos · Semi-cubierta</p>
             </div>
             <span class="badge">Refugio</span>
@@ -409,7 +409,7 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Descripción</span>
+                <span class="description__tag">Conjunto de 4 unidades de vivienda para inversion o renta</span>
                 <p class="description__headline">Volúmenes escalonados y revestimientos nobles para climas fríos.</p>
 
                 <div class="description__body">
