--- a/index.html
+++ b/index.html
@@ -428,30 +428,30 @@
             <div class="model__content">
               <div class="model__visual" data-interval="4700">
                 <div class="model__gallery">
-                <img class="slide active" src="Multimedia/Prop6AMZI/Render/1.OP REJA 2.jpg" alt="Casa Patagonia render exterior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/2.EXT DEP 1 DORM 2A.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/3.LIVING COMEDOR DEP1 B.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/4.LIVING COMEDOR DEP1 C.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/5.LIVING COMEDOR DEP1 E.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/6.HABITACION DEP1 A.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/7.HABITACION DEP1 AA.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/9.EXT DEP 1 DORM 2B.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/10.EXT DEP 1 DORM.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/11.EXT DEP 2 DORM 3.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/12.LIVING COMEDOR DEP2 A.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/13.LIVING COMEDOR DEP2 AA.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/14.LIVING COMEDOR DEP2 B.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/15.HABITACION PRINC DEP2 E.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/16.HABITACION SEC DEP 2 C.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/17.HABITACION SEC DEP2 D.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/18.HABITACION SEC DEP2 DA.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/19.1EXT DEP 2 DORM 3A.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/20.OP REJA 1.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/21.OP REJA 3.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/22.OP REJA 3A.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/23.OP REJA 3AA.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/24.TECHO2.jpg" alt="Casa Patagonia render interior">
-                <img class="slide" src="Multimedia/Prop6AMZI/Render/25.TECHO3.jpg" alt="Casa Patagonia render interior">                                                                                                                                                                       
+                <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/1.OP REJA 2.jpg" alt="Casa Patagonia render exterior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/2.EXT DEP 1 DORM 2A.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/3.LIVING COMEDOR DEP1 B.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/4.LIVING COMEDOR DEP1 C.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/5.LIVING COMEDOR DEP1 E.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/6.HABITACION DEP1 A.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/7.HABITACION DEP1 AA.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/9.EXT DEP 1 DORM 2B.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/10.EXT DEP 1 DORM.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/11.EXT DEP 2 DORM 3.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/12.LIVING COMEDOR DEP2 A.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/13.LIVING COMEDOR DEP2 AA.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/14.LIVING COMEDOR DEP2 B.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/15.HABITACION PRINC DEP2 E.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/16.HABITACION SEC DEP 2 C.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/17.HABITACION SEC DEP2 D.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/18.HABITACION SEC DEP2 DA.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/19.1EXT DEP 2 DORM 3A.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/20.OP REJA 1.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/21.OP REJA 3.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/22.OP REJA 3A.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/23.OP REJA 3AA.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/24.TECHO2.jpg" alt="Casa Patagonia render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Render/25.TECHO3.jpg" alt="Casa Patagonia render interior">                                                                                                                                                                       
 
                 </div>
               </div>
@@ -465,7 +465,7 @@
                 <div class="media-dropdown dropdown">
                   <button class="btn media-dropdown__toggle" type="button">Ver video</button>
                   <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Patagonia">
-                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop6/Videos/Video_Corto_de_Render_de_Casa.mp4" target="_blank" rel="noopener">Recorrido principal</a>
+                    <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop6AMZI/Videos/VIDEO ACTUALIZADO EXTERIOR.mp4" target="_blank" rel="noopener">Recorrido principal</a>
                   </div>
                 </div>
               </div>
